"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------

Add an option to the gtk client which controls what happens when you use apply
to cycle through containers.  It used to be closed->applied->open->applied.
Now, if you select the config option, it goes closed->applied->open->close->..
common/client.h: Add new config variable.
common/commands.c: Remove some dead commented out code.
common/init.c: Update save name for config value.
gtk/config.c: Update to have menu option in config window.
gtk/gx11.c: Change close_container() to send/not send apply based on setting.
   Add close_container_callback() which is used for the 'close' button,
   which has to always send the apply command.
MSW 2003-10-08

common/commands.c: improve expand_face() - there was the problem if multipart
   object that overlapped not always being drawn properly.  This is because
   expand_face would basicaly put the first one it received on the lower
   stack - this is fine if you came from above, but was incorrect if you
   approached from the south.  expand_face() now checks to see which one
   should overlap the other, based on where the coordinates would put it.
MSW 2003-10-07

Bulk of this commit is to fix big image support for the X11 client.
common/client.h: Add a couple new defines to denote how big the largest
   image may be, minimum reasonable map size for the_map structure,
   and how far off the map a head could be.
x11/png.c: Remove hard coded values of images being 32 pixels wide/high.
   Also, store away actual size of images, needed for big image stuff
   to get filled in properly.
x11/x11.c: Add an error handler to make it easier to catch bugs
   (gets real stack trace instead of the program exiting).  Fix
   up the gen_draw_face to properly draw big images, change
   call to allocate map to pass in new larger values.
x11/x11.h: Add width, height values to Pixmap data structure.